# AlphacodersDownloader

./: .gitignore  .pylintrc  Main.py  README.md  main.py  requirements.txt  run.py  setup.cfg  setup.py  setup_compile.py
.github/workflows/: generate-debian-package.yml  generate-rpm-package.yml  generate-snap-package.yml  mirror-github-to-gitlab.yml  publish-to-aur.yml  publish-to-pypi.yml
alphacoders_downloader/: __init__.py  __main__.py  alphacoders_downloader.py  cursor.py  exceptions.py  progress_bar.py  utils.py
alphacoders_downloader/util/: __init__.py  arguments_builder.py  cursor.py  progress_bar.py  spinner.py  utils.py
build_files/: PKGBUILD  setup_build.py  snapcraft.yaml
