[metadata]
name = AlphacodersDownloader
version = attr: alphacoders_downloader.__version__
url = https://github.com/Asthowen/AlphacodersDownloader
project_urls =
  GitHub: issues = https://github.com/Asthowen/AlphacodersDownloader/issues
  GitHub: repo = https://github.com/Asthowen/AlphacodersDownloader
description = A script for download wallpapers on https://alphacoders.com.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Asthowen<contact@asthowen.fr>
maintainer_email = contact@asthowen.fr
license = GPLv3
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.7
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

install_requires =
  beautifulsoup4 >= 4
  setproctitle >= 1.3.1
  aiofiles >= 0.8.0
  aiohttp >= 3.8